--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "flask (>=3.1.0,<4.0.0)",
+    "pre-commit (>=4.1.0,<5.0.0)",
+    "sqlalchemy (>=2.0.38,<3.0.0)",
 ]
 
 
