--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "flask (>=3.1.0,<4.0.0)",
     "pre-commit (>=4.1.0,<5.0.0)",
     "sqlalchemy (>=2.0.38,<3.0.0)",
+    "pyjwt (>=2.10.1,<3.0.0)",
 ]
 
 
