--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "pre-commit (>=4.1.0,<5.0.0)",
     "sqlalchemy (>=2.0.38,<3.0.0)",
     "pyjwt (>=2.10.1,<3.0.0)",
+    "flask-limiter (>=3.10.1,<4.0.0)",
 ]
 
 
