--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "sqlalchemy (>=2.0.38,<3.0.0)",
     "pyjwt (>=2.10.1,<3.0.0)",
     "flask-limiter (>=3.10.1,<4.0.0)",
+    "pyyaml (>=6.0.2,<7.0.0)",
     "flasgger (==0.9.7b2)",
 ]
 
