--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "flask-limiter (>=3.10.1,<4.0.0)",
     "pyyaml (>=6.0.2,<7.0.0)",
     "flasgger (==0.9.7b2)",
+    "pytest (>=8.3.4,<9.0.0)",
 ]
 
 
